# haexadron

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
agent/: classifier.py  config.py  inbox_analyzer.py  llm.py  main.py  models.py  pac_agent.py  sandbox_runner.py  security.py  security_advisor.py  verifier.py  vm_dispatch.py
config/deerflow/: config.yaml
docs/plans/: 2026-04-09-haexadron-architecture-design.md
